--- a/home/2_GUCCI/index.html
+++ b/home/2_GUCCI/index.html
@@ -51,7 +51,31 @@
       <a class="prev-btn" href="#"><img src="assets/img/icons/bt_left01_off.png" alt="이전 슬라이드 버튼"></a>
       <a class="next-btn" href="#"><img src="assets/img/icons/bt_right01_off.png" alt="다음 슬라이드 버튼"></a>
     </div>
-    <a href="#" class="present-svc">구찌 선물포장 서비스 <i class="fas fa-chevron-right"><span class="i-text-ir">오른쪽 화살표</span></i></a>
+
+    <div class="present-svc">
+      <h3>
+        <a href="#">구찌 선물포장 서비스 <i class="fas fa-chevron-right"><span class="i-text-ir">오른쪽 화살표</span></i></a>
+      </h3>
+      <div>
+        <em>특별한 서비스</em>
+        <h4>구찌 선물포장 서비스</h4>
+        <p>블랙 & 화이트 컨셉의 패키징을 만나보세요.</p>
+        <p>
+          구찌 공식 온라인 사이트에서는 상품을 구매하시는 모든 고객님께<br>
+          특별한 포장재를 이용하여 선물포장 후 배송해 드리고<br>
+          있습니다.
+        </p>
+        <p>
+          모든 상품에는 매장과 동일하게 구찌 쇼핑백이<br>
+          동봉되어 무료로 배송됩니다.
+        </p>
+        <p>
+          주문시, '선물메세지'를 작성하실 수 있으며 메시지는 인보이스에<br>
+          함께 프린트 되어 받으시는 분께 전달됩니다.
+        </p>
+        <button>닫기</button>
+      </div>
+    </div>
   </div>
 
   <header id="index-header">
@@ -90,10 +114,10 @@
         </div>
       </li>
       <li class="no-cursor">
-        <span>한국어</span>
+        <span class="no-cursor">한국어</span>
       </li>
       <li class="no-cursor">
-        <span>
+        <span class="no-cursor">
           <i class="fas fa-phone"><span class="i-text-ir">전화기</span></i>
           02-3452-1921
         </span>
@@ -155,14 +179,18 @@
     </ul>
 
     <div class="site-search">
-      <i class="fas fa-search"><span class="i-text-ir">검색</span></i>
-      <!-- open일 때 
+      <div>
+        <i class="fas fa-search"><span class="i-text-ir">검색</span></i>
+      </div>
+
+      <!-- open일 때  -->
+      <!-- <div>
         <i class="fas fa-times"><span class="i-text-ir">닫기</span></i>
         <a href="#">
           <i class="fas fa-search"><span class="i-text-ir">검색</span></i>
         </a>
         <input type="text" placeholder="검색"/>
-      -->
+      </div> -->
     </div>
 
     <nav class="gnb">
@@ -934,6 +962,177 @@
     </nav>
   </header>
 
+  <main>
+    <section>
+      <img src="assets/img/MainImage/ProductPush_5894791J70G1000_001_Light.jpg" alt=""/>
+      <em></em>
+      <h4></h4>
+      <span>다이아몬드</span>
+      <a href="#">자세히 보기</a>
+      <aside>
+        <div class="main-aside">
+          <em>
+            <img src="assets/img/MainImage/aside/Vignette_5894791J70G1000_001_Light.jpg" alt=""/>
+          </em>
+          <h4></h4>
+          <p>
+
+          </p>
+          <a href="#">
+            더 보기
+            <i class="fas fa-chevron-right"><span class="i-text-ir">오른쪽 화살표</span></i>
+          </a>
+        </div>
+      </aside>
+    </section>
+    <section>
+      <img src="assets/img/MainImage/FW19_FSWLook075KR_001_Light.jpg" alt=""/>
+      <em></em>
+      <h4></h4>
+      <span>다이아몬드</span>
+      <a href="#">자세히 보기</a>
+      <aside>
+        <div class="main-aside">
+          <em>
+            <img src="assets/img/MainImage/aside/Vignette_589996ZACKV9893_001_Light.jpg" alt=""/>
+          </em>
+          <h4></h4>
+          <p>
+
+          </p>
+          <a href="#">
+            더 보기
+            <i class="fas fa-chevron-right"><span class="i-text-ir">오른쪽 화살표</span></i>
+          </a>
+        </div>
+      </aside>
+      <aside>
+        <div class="main-aside">
+          <em>
+            <img src="assets/img/MainImage/aside/Vignette_596040J07409290_001_Light.jpg" alt=""/>
+          </em>
+          <h4></h4>
+          <p>
+
+          </p>
+          <a href="#">
+            더 보기
+            <i class="fas fa-chevron-right"><span class="i-text-ir">오른쪽 화살표</span></i>
+          </a>
+        </div>
+      </aside>
+      <aside>
+        <div class="main-aside">
+          <em>
+            <img src="assets/img/MainImage/aside/Vignette_588968HRQ006634_001_Light.jpg" alt=""/>
+          </em>
+          <h4></h4>
+          <p>
+
+          </p>
+          <a href="#">
+            더 보기
+            <i class="fas fa-chevron-right"><span class="i-text-ir">오른쪽 화살표</span></i>
+          </a>
+        </div>
+      </aside>  
+    </section>
+    <section>
+      <img src="assets/img/MainImage/HomepageVideoBackgroundStandard_S01-FS-Lineup_001_Default.jpg" alt=""/>
+      <em></em>
+      <h4></h4>
+      <span>다이아몬드</span>
+      <a href="#">자세히 보기</a>
+      <aside>
+        <div class="main-aside">
+          <h4></h4>
+          <p>
+
+          </p>
+          <a href="#">
+            더 보기
+            <i class="fas fa-chevron-right"><span class="i-text-ir">오른쪽 화살표</span></i>
+          </a>
+        </div>
+      </aside>
+    </section>
+    <section>
+      <img src="assets/img/MainImage/ProductPushGif_5923451LH109575-5923451LH107665-587242HQK208166_001_Default.gif" alt=""/>
+      <em></em>
+      <h4></h4>
+      <span>다이아몬드</span>
+      <a href="#">자세히 보기</a>
+      <aside>
+        <div class="main-aside">
+          <em>
+            <img src="assets/img/MainImage/aside/Vignette_5923451LH109575_001_Light.jpg" alt=""/>
+          </em>
+          <h4></h4>
+          <p>
+
+          </p>
+          <a href="#">
+            더 보기
+            <i class="fas fa-chevron-right"><span class="i-text-ir">오른쪽 화살표</span></i>
+          </a>
+        </div>
+      </aside>
+    </section>
+    <section class="section-gucci-story">
+      <!-- css : column-count 3 -->
+      <article>
+        <div class="image-part">
+          <img src="assets/img/MainImage" alt=""/>
+        </div>
+        <h4></h4>
+        <a href="#">
+          ~~
+          <i class="fas fa-chevron-right"><span class="i-text-ir">오른쪽 화살표</span></i>
+        </a>
+      </article>
+      <article>
+        <div class="image-part">
+          <img src="assets/img/MainImage" alt=""/>
+        </div>
+        <h4></h4>
+        <a href="#">
+          ~~
+          <i class="fas fa-chevron-right"><span class="i-text-ir">오른쪽 화살표</span></i>
+        </a>
+      </article>
+      <article>
+        <div class="image-part">
+          <img src="assets/img/MainImage" alt=""/>
+        </div>
+        <h4></h4>
+        <a href="#">
+          ~~
+          <i class="fas fa-chevron-right"><span class="i-text-ir">오른쪽 화살표</span></i>
+        </a>
+      </article>
+      <article>
+        <div class="image-part">
+          <img src="assets/img/MainImage" alt=""/>
+        </div>
+        <h4></h4>
+        <a href="#">
+          ~~
+          <i class="fas fa-chevron-right"><span class="i-text-ir">오른쪽 화살표</span></i>
+        </a>
+      </article>
+      <article>
+        <div class="image-part">
+          <img src="assets/img/MainImage" alt=""/>
+        </div>
+        <h4></h4>
+        <a href="#">
+          ~~
+          <i class="fas fa-chevron-right"><span class="i-text-ir">오른쪽 화살표</span></i>
+        </a>
+      </article>
+    </section>
+  </main>
+
 
 <script>
   'use strict';
@@ -980,6 +1179,16 @@
     // timerId = setTimeout(() => {showSlide(slideNext)}, timerSpeed);
   }
 
+  //visual present-svc
+
+  $('.present-svc > h3').on('click', function(){
+    $(this).parent().find('div').addClass('on');
+  });
+
+  $('.present-svc button').on('click', function(){
+    $('.present-svc').find('div').removeClass('on');
+  });
+
   //snb effect
 
   $('#popup-nation').on('mouseenter', function(){
@@ -1018,7 +1227,6 @@
     $(this).find('div').removeClass('on');
   });
 
-  
   function popupAddClassOn(selector, showWhat) {
     $(selector).on('mouseenter', function(){
       $(this).find(showWhat).addClass('on');
