--- a/home/2_GUCCI/index.html
+++ b/home/2_GUCCI/index.html
@@ -61,16 +61,16 @@
         <h4>구찌 선물포장 서비스</h4>
         <p>블랙 & 화이트 컨셉의 패키징을 만나보세요.</p>
         <p>
-          구찌 공식 온라인 사이트에서는 상품을 구매하시는 모든 고객님께<br>
-          특별한 포장재를 이용하여 선물포장 후 배송해 드리고<br>
+          구찌 공식 온라인 사이트에서는 상품을 구매하시는 모든 고객님께<br/>
+          특별한 포장재를 이용하여 선물포장 후 배송해 드리고<br/>
           있습니다.
         </p>
         <p>
-          모든 상품에는 매장과 동일하게 구찌 쇼핑백이<br>
+          모든 상품에는 매장과 동일하게 구찌 쇼핑백이<br/>
           동봉되어 무료로 배송됩니다.
         </p>
         <p>
-          주문시, '선물메세지'를 작성하실 수 있으며 메시지는 인보이스에<br>
+          주문시, '선물메세지'를 작성하실 수 있으며 메시지는 인보이스에<br/>
           함께 프린트 되어 받으시는 분께 전달됩니다.
         </p>
         <button>닫기</button>
@@ -962,173 +962,205 @@
     </nav>
   </header>
 
-  <main>
+  <main class="index-main">
     <section>
-      <img src="assets/img/MainImage/ProductPush_5894791J70G1000_001_Light.jpg" alt=""/>
-      <em></em>
-      <h4></h4>
-      <span>다이아몬드</span>
-      <a href="#">자세히 보기</a>
-      <aside>
-        <div class="main-aside">
-          <em>
-            <img src="assets/img/MainImage/aside/Vignette_5894791J70G1000_001_Light.jpg" alt=""/>
-          </em>
-          <h4></h4>
+      <img src="assets/img/MainImage/ProductPush_5894791J70G1000_001_Light.jpg" alt="1969 페이턴트 가죽 미니 탑 핸들백"/>
+      <em>핸드백</em>
+      <h4>[실비] <span class="perhaps">1969</span> 페이턴트 가죽 미니 탑 핸들백</h4>
+      <span><img src="assets/img/icons/diamond.png" alt="다이아몬드 아이콘"></span>
+      <a href="#">
+        <span>자세히 보기</span>
+      </a>
+      <aside class="aside-right">
+        <a href="#">
+          <span class="aside-image">
+            <img src="assets/img/MainImage/aside/Vignette_5894791J70G1000_001_Light.jpg" alt="1969 페이턴트 가죽 미니 탑 핸들백"/>
+          </span>
+          <h4>실비</h4>
           <p>
-
+            더 얇은<br/>
+            디자인으로 변화를<br/>
+            준 하우스 특유의<br/>
+            체인
           </p>
-          <a href="#">
+          <span class="aside-hover-effect">
             더 보기
             <i class="fas fa-chevron-right"><span class="i-text-ir">오른쪽 화살표</span></i>
-          </a>
-        </div>
+          </span>
+        </a>
       </aside>
     </section>
     <section>
-      <img src="assets/img/MainImage/FW19_FSWLook075KR_001_Light.jpg" alt=""/>
-      <em></em>
-      <h4></h4>
-      <span>다이아몬드</span>
-      <a href="#">자세히 보기</a>
-      <aside>
-        <div class="main-aside">
-          <em>
-            <img src="assets/img/MainImage/aside/Vignette_589996ZACKV9893_001_Light.jpg" alt=""/>
-          </em>
-          <h4></h4>
+      <img src="assets/img/MainImage/FW19_FSWLook075KR_001_Light.jpg" alt="룩 N.75"/>
+      <em>레디&middot;투&middot;웨어</em>
+      <h4>룩 <span class="perhaps">N.75</span></h4>
+      <span><img src="assets/img/icons/diamond.png" alt="다이아몬드 아이콘"></span>
+      <a href="#">
+        <span>컬렉션 만나보기</span>
+      </a>
+      <aside class="aside-right">
+        <a href="#">
+          <span class="aside-image">
+            <img src="assets/img/MainImage/aside/Vignette_589996ZACKV9893_001_Light.jpg" alt="드레스"/>
+          </span>
+          <h4>드레스</h4>
           <p>
-
+            비닐 슬리브와<br/>
+            벨벳 트리밍으로<br/>
+            대비 효과를<br/>
+            연출한 올 화이트<br/>
+            드레스.
           </p>
-          <a href="#">
+          <span class="aside-hover-effect">
             더 보기
             <i class="fas fa-chevron-right"><span class="i-text-ir">오른쪽 화살표</span></i>
-          </a>
-        </div>
+          </span>
+        </a>
       </aside>
-      <aside>
-        <div class="main-aside">
-          <em>
-            <img src="assets/img/MainImage/aside/Vignette_596040J07409290_001_Light.jpg" alt=""/>
-          </em>
-          <h4></h4>
+      <aside class="aside-left">
+        <a href="#">
+          <span class="aside-image">
+            <img src="assets/img/MainImage/aside/Vignette_596040J07409290_001_Light.jpg" alt="아이웨어"/>
+          </span>
+          <h4>아이웨어</h4>
           <p>
-
+            <span class="perhaps">1980</span>년대 레트로<br/>
+            감성이 가미된<br/>
+            오버사이즈<br/>
+            스펙터클.
           </p>
-          <a href="#">
+          <span class="aside-hover-effect">
             더 보기
             <i class="fas fa-chevron-right"><span class="i-text-ir">오른쪽 화살표</span></i>
-          </a>
-        </div>
+          </span>
+        </a>
       </aside>
-      <aside>
-        <div class="main-aside">
-          <em>
-            <img src="assets/img/MainImage/aside/Vignette_588968HRQ006634_001_Light.jpg" alt=""/>
-          </em>
-          <h4></h4>
+      <aside class="aside-right">
+        <a href="#">
+          <span class="aside-image">
+            <img src="assets/img/MainImage/aside/Vignette_588968HRQ006634_001_Light.jpg" alt="부츠"/>
+          </span>
+          <h4>여성 슈즈</h4>
           <p>
-
+            선명한 레드<br/>
+            컬러의 플렛폼과<br/>
+            청키 힐 와이드 핏<br/>
+            부츠
           </p>
-          <a href="#">
+          <span class="aside-hover-effect">
             더 보기
             <i class="fas fa-chevron-right"><span class="i-text-ir">오른쪽 화살표</span></i>
-          </a>
-        </div>
+          </span>
+        </a>
       </aside>  
     </section>
     <section>
-      <img src="assets/img/MainImage/HomepageVideoBackgroundStandard_S01-FS-Lineup_001_Default.jpg" alt=""/>
-      <em></em>
-      <h4></h4>
-      <span>다이아몬드</span>
-      <a href="#">자세히 보기</a>
-      <aside>
-        <div class="main-aside">
-          <h4></h4>
+      <img src="assets/img/MainImage/HomepageVideoBackgroundStandard_S01-FS-Lineup_001_Default.jpg" alt="2020 봄/여름 컬렉션"/>
+      <aside class="aside-center">
+        <a href="#">
+          <h4>
+            <span class="perhaps">2020</span> 봄/여름 컬렉션
+          </h4>
           <p>
-
+            알레산드로 미켈레<br/>
+            의 <span class="perhaps">2020</span> 봄/여름<br/>
+            컬렉션
           </p>
-          <a href="#">
-            더 보기
+          <span class="aside-hover-effect">
+            갤러리 자세히 보기
             <i class="fas fa-chevron-right"><span class="i-text-ir">오른쪽 화살표</span></i>
-          </a>
-        </div>
+          </span>
+        </a>
       </aside>
     </section>
     <section>
-      <img src="assets/img/MainImage/ProductPushGif_5923451LH109575-5923451LH107665-587242HQK208166_001_Default.gif" alt=""/>
-      <em></em>
-      <h4></h4>
-      <span>다이아몬드</span>
-      <a href="#">자세히 보기</a>
-      <aside>
-        <div class="main-aside">
-          <em>
-            <img src="assets/img/MainImage/aside/Vignette_5923451LH109575_001_Light.jpg" alt=""/>
-          </em>
-          <h4></h4>
+      <img src="assets/img/MainImage/ProductPushGif_5923451LH109575-5923451LH107665-587242HQK208166_001_Default.gif" alt="남성용 울트라페이스 스니커즈"/>
+      <em>남성 슈즈</em>
+      <h4>남성용 울트라페이스 스니커즈</h4>
+      <span><img src="assets/img/icons/diamond.png" alt="다이아몬드 아이콘"></span>
+      <a href="#">
+        <span>자세히 보기</span>
+      </a>
+      <aside class="aside-right">
+        <a href="#">
+          <span class="aside-image">
+            <img src="assets/img/MainImage/aside/Vignette_5923451LH109575_001_Light.jpg" alt="남성용 울트라페이스 스니커즈"/>
+          </span>
+          <h4>스니커즈</h4>
           <p>
-
+            가죽과 패브릭의<br/>
+            다양한 조합으로<br/>
+            완성된 로우탑
           </p>
-          <a href="#">
+          <span class="aside-hover-effect">
             더 보기
             <i class="fas fa-chevron-right"><span class="i-text-ir">오른쪽 화살표</span></i>
-          </a>
-        </div>
+          </span>
+        </a>
       </aside>
     </section>
     <section class="section-gucci-story">
+      <h3>구찌 스토리</h3>
       <!-- css : column-count 3 -->
       <article>
         <div class="image-part">
-          <img src="assets/img/MainImage" alt=""/>
+          <img src="assets/img/MainImage/SectionGucciStory/StyleNewsSingle_S01-FS-Video_001_Default.jpg" alt="2020 봄/여름 패션쇼"/>
         </div>
-        <h4></h4>
-        <a href="#">
-          ~~
+        <h4>
+          <span>2020</span> 봄/여름 패션쇼
+        </h4>
+        <span class="aside-hover-effect">
+          여성 및 남성 컬렉션
           <i class="fas fa-chevron-right"><span class="i-text-ir">오른쪽 화살표</span></i>
-        </a>
+        </span>
       </article>
       <article>
         <div class="image-part">
-          <img src="assets/img/MainImage" alt=""/>
+          <img src="assets/img/MainImage/SectionGucciStory/StyleNewsSingle_GQ-Ghali_001_Default.jpg" alt="아티스트 갈리(Ghali)"/>
         </div>
-        <h4></h4>
-        <a href="#">
-          ~~
+        <h4>
+          더 퍼포머스: 갈리(Ghali)
+        </h4>
+        <span class="aside-hover-effect">
+          이탈리아 랩 아티스트
           <i class="fas fa-chevron-right"><span class="i-text-ir">오른쪽 화살표</span></i>
-        </a>
+        </span>
       </article>
       <article>
         <div class="image-part">
-          <img src="assets/img/MainImage" alt=""/>
+          <img src="assets/img/MainImage/SectionGucciStory/StyleNewsDoubleVertical_S01-FS-Gallery_001_Default.jpg" alt="2020 봄/여름 컬렉션"/>
         </div>
-        <h4></h4>
-        <a href="#">
-          ~~
+        <h4>
+          <span>2020</span> 봄/여름 컬렉션
+        </h4>
+        <span class="aside-hover-effect">
+          여성 및 남성 컬렉션
           <i class="fas fa-chevron-right"><span class="i-text-ir">오른쪽 화살표</span></i>
-        </a>
+        </span>
       </article>
       <article>
         <div class="image-part">
-          <img src="assets/img/MainImage" alt=""/>
+          <img src="assets/img/MainImage/SectionGucciStory/StyleNewsSingle_S93-FS-ADV_001_Default.jpg" alt="프레타포르테"/>
         </div>
-        <h4></h4>
-        <a href="#">
-          ~~
+        <h4>
+          프레타포르테(Pret-A-Porter)
+        </h4>
+        <span class="aside-hover-effect">
+          <span class="perhaps">2019</span> 가을/겨울 컬렉션 캠페인
           <i class="fas fa-chevron-right"><span class="i-text-ir">오른쪽 화살표</span></i>
-        </a>
+        </span>
       </article>
       <article>
         <div class="image-part">
-          <img src="assets/img/MainImage" alt=""/>
+          <img src="assets/img/MainImage/SectionGucciStory/StyleNewsSingle_Memoire-campaign_001_Default.jpg" alt="Gucci Memoire d'une Odeur 새로운 유니버설 향수"/>
         </div>
-        <h4></h4>
-        <a href="#">
-          ~~
+        <h4>
+          Gucci Memoire d'une Odeur
+        </h4>
+        <span class="aside-hover-effect">
+          새로운 유니버설 향수
           <i class="fas fa-chevron-right"><span class="i-text-ir">오른쪽 화살표</span></i>
-        </a>
+        </span>
       </article>
     </section>
   </main>
