--- a/home/2_GUCCI/index.html
+++ b/home/2_GUCCI/index.html
@@ -964,13 +964,17 @@
 
   <main class="index-main">
     <section>
-      <img src="assets/img/MainImage/ProductPush_5894791J70G1000_001_Light.jpg" alt="1969 페이턴트 가죽 미니 탑 핸들백"/>
-      <em>핸드백</em>
-      <h4>[실비] <span class="perhaps">1969</span> 페이턴트 가죽 미니 탑 핸들백</h4>
-      <span><img src="assets/img/icons/diamond.png" alt="다이아몬드 아이콘"></span>
-      <a href="#">
-        <span>자세히 보기</span>
-      </a>
+      <div class="section-image">
+        <img src="assets/img/MainImage/ProductPush_5894791J70G1000_001_Light.jpg" alt="1969 페이턴트 가죽 미니 탑 핸들백"/>
+      </div>
+      <div class="section-contents">
+        <em>핸드백</em>
+        <h4>[실비] <span class="perhaps">1969</span> 페이턴트 가죽 미니 탑 핸들백</h4>
+        <span><img src="assets/img/icons/diamond.png" alt="다이아몬드 아이콘"></span>
+        <a href="#">
+          <span>자세히 보기</span>
+        </a>
+      </div>
       <aside class="aside-right">
         <a href="#">
           <span class="aside-image">
@@ -990,14 +994,18 @@
         </a>
       </aside>
     </section>
-    <section>
-      <img src="assets/img/MainImage/FW19_FSWLook075KR_001_Light.jpg" alt="룩 N.75"/>
-      <em>레디&middot;투&middot;웨어</em>
-      <h4>룩 <span class="perhaps">N.75</span></h4>
-      <span><img src="assets/img/icons/diamond.png" alt="다이아몬드 아이콘"></span>
-      <a href="#">
-        <span>컬렉션 만나보기</span>
-      </a>
+    <section class="model-look">
+      <div class="section-image">
+        <img src="assets/img/MainImage/FW19_FSWLook075KR_001_Light.jpg" alt="룩 N.75"/>
+      </div>
+      <div class="section-contents">
+        <em>레디&middot;투&middot;웨어</em>
+        <h4>룩 <span class="perhaps">N.75</span></h4>
+        <span><img src="assets/img/icons/diamond.png" alt="다이아몬드 아이콘"></span>
+        <a href="#">
+          <span>컬렉션 만나보기</span>
+        </a>
+      </div>
       <aside class="aside-right">
         <a href="#">
           <span class="aside-image">
@@ -1054,8 +1062,10 @@
         </a>
       </aside>  
     </section>
-    <section>
-      <img src="assets/img/MainImage/HomepageVideoBackgroundStandard_S01-FS-Lineup_001_Default.jpg" alt="2020 봄/여름 컬렉션"/>
+    <section class="full-image">
+      <div class="section-image">
+        <img src="assets/img/MainImage/HomepageVideoBackgroundStandard_S01-FS-Lineup_001_Default.jpg" alt="2020 봄/여름 컬렉션"/>
+      </div>
       <aside class="aside-center">
         <a href="#">
           <h4>
@@ -1066,7 +1076,7 @@
             의 <span class="perhaps">2020</span> 봄/여름<br/>
             컬렉션
           </p>
-          <span class="aside-hover-effect">
+          <span class="aside-hover-effect wide-margin">
             갤러리 자세히 보기
             <i class="fas fa-chevron-right"><span class="i-text-ir">오른쪽 화살표</span></i>
           </span>
@@ -1074,13 +1084,17 @@
       </aside>
     </section>
     <section>
-      <img src="assets/img/MainImage/ProductPushGif_5923451LH109575-5923451LH107665-587242HQK208166_001_Default.gif" alt="남성용 울트라페이스 스니커즈"/>
-      <em>남성 슈즈</em>
-      <h4>남성용 울트라페이스 스니커즈</h4>
-      <span><img src="assets/img/icons/diamond.png" alt="다이아몬드 아이콘"></span>
-      <a href="#">
-        <span>자세히 보기</span>
-      </a>
+      <div class="section-image">
+        <img src="assets/img/MainImage/ProductPushGif_5923451LH109575-5923451LH107665-587242HQK208166_001_Default.gif" alt="남성용 울트라페이스 스니커즈"/>
+      </div>
+      <div class="section-contents">
+        <em>남성 슈즈</em>
+        <h4>남성용 울트라페이스 스니커즈</h4>
+        <span><img src="assets/img/icons/diamond.png" alt="다이아몬드 아이콘"></span>
+        <a href="#">
+          <span>자세히 보기</span>
+        </a>
+      </div>
       <aside class="aside-right">
         <a href="#">
           <span class="aside-image">
@@ -1102,69 +1116,70 @@
     <section class="section-gucci-story">
       <h3>구찌 스토리</h3>
       <!-- css : column-count 3 -->
-      <article>
-        <div class="image-part">
-          <img src="assets/img/MainImage/SectionGucciStory/StyleNewsSingle_S01-FS-Video_001_Default.jpg" alt="2020 봄/여름 패션쇼"/>
-        </div>
-        <h4>
-          <span>2020</span> 봄/여름 패션쇼
-        </h4>
-        <span class="aside-hover-effect">
-          여성 및 남성 컬렉션
-          <i class="fas fa-chevron-right"><span class="i-text-ir">오른쪽 화살표</span></i>
-        </span>
-      </article>
-      <article>
-        <div class="image-part">
-          <img src="assets/img/MainImage/SectionGucciStory/StyleNewsSingle_GQ-Ghali_001_Default.jpg" alt="아티스트 갈리(Ghali)"/>
-        </div>
-        <h4>
-          더 퍼포머스: 갈리(Ghali)
-        </h4>
-        <span class="aside-hover-effect">
-          이탈리아 랩 아티스트
-          <i class="fas fa-chevron-right"><span class="i-text-ir">오른쪽 화살표</span></i>
-        </span>
-      </article>
-      <article>
-        <div class="image-part">
-          <img src="assets/img/MainImage/SectionGucciStory/StyleNewsDoubleVertical_S01-FS-Gallery_001_Default.jpg" alt="2020 봄/여름 컬렉션"/>
-        </div>
-        <h4>
-          <span>2020</span> 봄/여름 컬렉션
-        </h4>
-        <span class="aside-hover-effect">
-          여성 및 남성 컬렉션
-          <i class="fas fa-chevron-right"><span class="i-text-ir">오른쪽 화살표</span></i>
-        </span>
-      </article>
-      <article>
-        <div class="image-part">
-          <img src="assets/img/MainImage/SectionGucciStory/StyleNewsSingle_S93-FS-ADV_001_Default.jpg" alt="프레타포르테"/>
-        </div>
-        <h4>
-          프레타포르테(Pret-A-Porter)
-        </h4>
-        <span class="aside-hover-effect">
-          <span class="perhaps">2019</span> 가을/겨울 컬렉션 캠페인
-          <i class="fas fa-chevron-right"><span class="i-text-ir">오른쪽 화살표</span></i>
-        </span>
-      </article>
-      <article>
-        <div class="image-part">
-          <img src="assets/img/MainImage/SectionGucciStory/StyleNewsSingle_Memoire-campaign_001_Default.jpg" alt="Gucci Memoire d'une Odeur 새로운 유니버설 향수"/>
-        </div>
-        <h4>
-          Gucci Memoire d'une Odeur
-        </h4>
-        <span class="aside-hover-effect">
-          새로운 유니버설 향수
-          <i class="fas fa-chevron-right"><span class="i-text-ir">오른쪽 화살표</span></i>
-        </span>
-      </article>
+      <div>
+        <article>
+          <div class="image-part">
+            <img src="assets/img/MainImage/SectionGucciStory/StyleNewsSingle_S01-FS-Video_001_Default.jpg" alt="2020 봄/여름 패션쇼"/>
+          </div>
+          <h4>
+            <span>2020</span> 봄/여름 패션쇼
+          </h4>
+          <span class="aside-hover-effect">
+            여성 및 남성 컬렉션
+            <i class="fas fa-chevron-right"><span class="i-text-ir">오른쪽 화살표</span></i>
+          </span>
+        </article>
+        <article>
+          <div class="image-part">
+            <img src="assets/img/MainImage/SectionGucciStory/StyleNewsSingle_GQ-Ghali_001_Default.jpg" alt="아티스트 갈리(Ghali)"/>
+          </div>
+          <h4>
+            더 퍼포머스: 갈리(Ghali)
+          </h4>
+          <span class="aside-hover-effect">
+            이탈리아 랩 아티스트
+            <i class="fas fa-chevron-right"><span class="i-text-ir">오른쪽 화살표</span></i>
+          </span>
+        </article>
+        <article>
+          <div class="image-part">
+            <img src="assets/img/MainImage/SectionGucciStory/StyleNewsDoubleVertical_S01-FS-Gallery_001_Default.jpg" alt="2020 봄/여름 컬렉션"/>
+          </div>
+          <h4>
+            <span>2020</span> 봄/여름 컬렉션
+          </h4>
+          <span class="aside-hover-effect">
+            여성 및 남성 컬렉션
+            <i class="fas fa-chevron-right"><span class="i-text-ir">오른쪽 화살표</span></i>
+          </span>
+        </article>
+        <article>
+          <div class="image-part">
+            <img src="assets/img/MainImage/SectionGucciStory/StyleNewsSingle_S93-FS-ADV_001_Default.jpg" alt="프레타포르테"/>
+          </div>
+          <h4>
+            프레타포르테(Pret-A-Porter)
+          </h4>
+          <span class="aside-hover-effect">
+            <span class="perhaps">2019</span> 가을/겨울 컬렉션 캠페인
+            <i class="fas fa-chevron-right"><span class="i-text-ir">오른쪽 화살표</span></i>
+          </span>
+        </article>
+        <article>
+          <div class="image-part">
+            <img src="assets/img/MainImage/SectionGucciStory/StyleNewsSingle_Memoire-campaign_001_Default.jpg" alt="Gucci Memoire d'une Odeur 새로운 유니버설 향수"/>
+          </div>
+          <h4>
+            Gucci Memoire d'une Odeur
+          </h4>
+          <span class="aside-hover-effect">
+            새로운 유니버설 향수
+            <i class="fas fa-chevron-right"><span class="i-text-ir">오른쪽 화살표</span></i>
+          </span>
+        </article>
+      </div>
     </section>
   </main>
-
 
 <script>
   'use strict';
@@ -1320,18 +1335,13 @@
   });
 
   //nav
-  $('.gnb > ul > li').on('mouseenter',function(){
-    $('.gnb > ul > li > ul').removeClass('on');
-    $(this).find('ul').addClass('on');
-  });
+  // $('.gnb > ul > li').on('mouseenter',function(){
+  //   $(this).find('ul').addClass('on');
+  // });
+  // $('.gnb > ul > li').on('mouseleave',function(){
+  //   $(this).find('ul').removeClass('on');
+  // });
 
-  $('.gnb > ul > li').on('mouseleave',function(){
-    $('.gnb > ul > li > ul').removeClass('on');
-  });
-
-  $('#index-header').on('mouseleave', function(){
-    $('.gnb > ul > li > ul').removeClass('on');
-  });
 
 </script>
 </body>
