--- a/home/2_GUCCI/index.html
+++ b/home/2_GUCCI/index.html
@@ -1181,6 +1181,153 @@
     </section>
   </main>
 
+  <footer>
+    <div class="footer-wrap">
+      <div>
+        <header>특별한 서비스</header>
+        <ul>
+          <li>
+            <a href="#">
+              <!-- icon color 807D7A -->
+              <i class="fas fa-gift"><span class="i-text-ir">선물모양아이콘</span></i>
+              구찌 선물포장 서비스
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <i class="fas fa-gift"><span class="i-text-ir">선물모양아이콘</span></i>
+              무이자 할부 서비스
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <i class="fas fa-gift"><span class="i-text-ir">선물모양아이콘</span></i>
+              개인정보처리 변경안내
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <i class="fas fa-utensils"><span class="i-text-ir">레스토랑아이콘</span></i>
+              Gucci Osteria da Massimo Bottura
+            </a>
+          </li>
+        </ul>
+        <header>고객 문의</header>
+        <ul>
+          <li>
+            <a href="#">클라이언트 서비스</a>
+          </li>
+          <li>
+            <a href="#">자주 묻는 질문(FAQ)</a>
+          </li>
+          <li>
+            <a href="#">교환/환물 정책</a>
+          </li>
+          <li>
+            <a href="#">쇼핑가이드</a>
+          </li>
+        </ul>
+        <header>기업 정보</header>
+        <ul>
+          <li>
+            <a href="#">Gucci 정보</a>
+          </li>
+          <li>
+            <a href="#">Gucci Garden</a>
+          </li>
+          <li>
+            <a href="#">Gucci Equilibrium</a>
+          </li>
+          <li>
+            <a href="#">Code of Ethics</a>
+          </li>
+          <li>
+            <a href="#">Careers</a>
+          </li>
+          <li>
+            <a href="#">개인정보처리방침</a>
+          </li>
+          <li>
+            <a href="#">이용약관</a>
+          </li>
+        </ul>
+        <header>구찌를 만나보세요</header>
+        <ul>
+          <li>
+            <a href="#">
+              <i class="fab fa-facebook-f"><span class="i-text-ir">Facebook</span></i>
+              Facebook
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img src="assets/img/icons/gucci-footer-icon.png" alt="gucci 아이콘">
+              Gucci
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img src="assets/img/icons/gucci-footer-icon.png" alt="gucci 아이콘">
+              Gucci Beauty
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <i class="fab fa-youtube"><span class="i-text-ir">YouTube</span></i>
+              YouTube
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <i class="fab fa-twitter"><span class="i-text-ir">Twitter</span></i>
+              Twitter
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <i class="fas fa-comment-dots"><span class="i-text-ir">Kakao Talk Channel</span></i>
+              Kakao Talk Channel
+            </a>
+          </li>
+        </ul>
+        <header>매장찾기</header>
+        <div>
+          <input type="text" placeholder="국가, 지역 또는 도시">
+          <i class="fas fa-map-marker-alt"><span class="i-text-ir">지도표시</span></i>
+          <button><i class="fas fa-chevron-right"><span class="i-text-ir">검색 화살표</span></i></button>
+        </div>
+      </div>
+
+      <div class="other-site">
+        <!-- svg 가져오는 법 -->
+        <a href="#">
+          <img src="" alt="">
+        </a>
+        <a href="#">
+          <img src="" alt="">
+        </a>
+        <a href="#">
+          <img src="" alt="">
+        </a>
+        <a href="#">
+          <img src="" alt="">
+        </a>
+      </div>
+
+      <div class="gucci-info">
+        <!-- span display block / em display inline-block -->
+        <span>구찌 코리아 유한회사</span>
+        <em>대표자: 카림 페투스</em> /
+        <address>서울시 강남구 영동대로 517, 35층 (삼성동, 아셈타워)</address> /
+        <em>사업자등록번호: 120-81-79834</em>
+        <span>통신판매업 신고번호 제 2015-서울강남-00052 호 <a href="#">(사업자 정보 확인)</a></span>
+        <em>개인정보보호책임자: 유인경</em> /
+        <em>호스팅 서비스: Rackspace Hosting</em>
+        <span>클라이언트서비스센터 02-3452-1921 메일 문의 clientservice.kr@gucci.com</span>
+      </div>
+    </div>
+  </footer>
+
 <script>
   'use strict';
 
