visual slide navigation image change

--- a/home/2_GUCCI/index.html
+++ b/home/2_GUCCI/index.html
@@ -48,8 +48,8 @@
     </ul>
 
     <div class="slide-btns">
-      <a class="prev-btn" href="#"><img src="assets/img/icons/bt_left01_off.png" alt="이전 슬라이드 버튼"></a>
-      <a class="next-btn" href="#"><img src="assets/img/icons/bt_right01_off.png" alt="다음 슬라이드 버튼"></a>
+      <a class="prev-btn" href="#"><img src="assets/img/icons/visual_slide_arrow_left.png" alt="이전 슬라이드 버튼"></a>
+      <a class="next-btn" href="#"><img src="assets/img/icons/visual_slide_arrow_right.png" alt="다음 슬라이드 버튼"></a>
     </div>
 
     <div class="present-svc">
@@ -62,7 +62,7 @@
   <header id="index-header">
     <ul id="nation-info">
       <li id="popup-nation" popper>
-        <span>
+        <span class="cursor">
           <i class="fas fa-map-marker-alt"><span class="i-text-ir">지도표시</span></i>
           <span hidden-text>대한민국</span>
         </span>
@@ -96,11 +96,11 @@
           </div>
         </div>
       </li>
-      <li class="no-cursor">
-        <span class="no-cursor" hidden-text>한국어</span>
+      <li>
+        <span hidden-text>한국어</span>
       </li>
-      <li class="no-cursor">
-        <span class="no-cursor">
+      <li>
+        <span>
           <i class="fas fa-phone"><span class="i-text-ir">전화기</span></i>
           02-3452-1921
         </span>
@@ -112,7 +112,7 @@
     <ul class="user-info">
       <!-- 유저인포 css 공유 -->
       <li id="popup-login" popper>
-        <span>
+        <span class="cursor">
           <i class="fas fa-user"><span class="i-text-ir">사람</span></i>
           <span hidden-text>로그인</span>
         </span>
@@ -133,7 +133,7 @@
         </div>
       </li>
       <li id="popup-like-it" popper>
-        <span>
+        <span class="cursor">
           <i class="far fa-heart"><span class="i-text-ir">좋아요</span></i>
         </span>
         <div class="dropdown-wrap" dropdown>
@@ -146,7 +146,7 @@
         </div>
       </li>
       <li id="popup-shopping-bag" popper>
-        <span>
+        <span class="cursor">
           <i class="fas fa-shopping-bag"><span class="i-text-ir">가방</span></i>
           <span hidden-text>쇼핑백</span>
         </span>
@@ -1338,11 +1338,11 @@
                   <div id="app-links">
                     <a href="https://itunes.apple.com/it/app/gucci/id334876990?mt=8" target="_blank">
                       Apple App Store
-                      <i class="fas fa-file-export"><span class="i-text-ir">링크 연결 표시</span></i>
+                      <i class="fas fa-external-link-alt"><span class="i-text-ir">링크 연결 표시</span></i>
                     </a>
                     <a href="https://play.google.com/store/apps/details?id=com.gucci.gucciapp" target="_blank">
                       Google Play
-                      <i class="fas fa-file-export"><span class="i-text-ir">링크 연결 표시</span></i>
+                      <i class="fas fa-external-link-alt"><span class="i-text-ir">링크 연결 표시</span></i>
                     </a>
                   </div>
                 </div>
